# orarelabutar

./: .env.example  .gitignore  .gitmodules  README.md  content.config.ts  eslint.config.mjs  nuxt.config.ts  package-lock.json  package.json  schema.sql  test-sharp.mjs  tsconfig.json  vitest.config.ts  wrangler.toml
.data/content/: contents.sqlite
.qwen/: settings.json
.seo/: analise.md
ai-image-util/: README.md  config.yaml  pyproject.toml  worker-ai.js
ai-image-util/src/: main.py
ai-image-util/tests/: test_single.py
ai-image-util/tests/output/: ao-redor-do-portao.test_prompt.txt
app/: app.vue  error.vue
app/components/: AudioCard.vue  AudioPlayer.vue  Divisor.vue  Header.vue  Like.vue  LikeButton.vue  MapSite.vue  Newsletter.vue  PdfCard.vue  Shared.vue  Slides.vue  SocialMedia.vue  SocialShare.vue  TheFooter.vue  TheHeader.vue  TheNewsletter.vue  TheSlides.vue
app/composables/: useShareMedia.ts
app/config/: index.ts
app/layouts/: default.vue
app/pages/: index.vue  links-uteis.vue  pdfs.vue  podcast.vue  sobre.vue
app/transformers/: date-format.ts
content/: sobre.md
migrations/: 0001_create_newsletter_table.sql
public/: robots.txt
scripts/: convert_to_webp.mjs  generate_audio.mjs  generate_pdf_covers.sh  isolate_css.sh  list_voices.mjs  slugify_acervo.mjs  sync_cms.mjs  test_newsletter_api.mjs  update_metadata_refs.mjs
server/: nitro.ts
transformers/: audio-source.ts  date-published.ts  default-images.ts  pdf-source.ts  slugify-collection.ts  slugify-title.ts
types/: content.d.ts  content.ts
utils/: theme.ts
(+112 files in other folders)
